--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Joaqu&iacute;n Lombard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>    
   </head>
   <body>
   <section class="section">
@@ -23,21 +23,22 @@
 
         <div class="column">
           <div class="box">
-            what's up my name is Joaquin and i do photography. Observe.
-
-            <a class="button is-success" href="https://500px.com/joaquinisawesome">Portfolio</a>
+            what's up my name is Joaquin and i do photography. <a href="https://500px.com/joaquinisawesome">Observe in my portfolio</a>.
           </div>
+
         </div>
       </div>
     </div>
   </section>
 
   <footer class="footer">
-    <div class="content has-text-centered">
-      <p>
-        <strong>Joaqu&iacute;n Lombardi</strong>
-        The website content is licensed.
-      </p>
+    <div class="content has-text-centered">        
+      <div class="section">
+        <a href="https://500px.com/joaquinisawesome"><span class="icon is-large has-text-black"><i class="fab fa-3x fa-500px"></i></span></a>
+        <a href="https://instagram.com/50hrplaylist"><span class="icon is-large has-text-danger"><i class="fab fa-3x fa-instagram"></i></span></a>
+      </div>        
+
+      All photos and content by <strong>Joaqu&iacute;n Lombardi</strong>
     </div>
   </footer>
 
